--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.1",
     "yarn": "^1.22.19"
   },
@@ -11,6 +12,6 @@
   "author": "Jaime Nufio <jaimeenufio@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node Server/server.js"
+    "start": "nodemon node Server/server.js"
   }
 }
