--- a/Server/package.json
+++ b/Server/package.json
@@ -7,11 +7,11 @@
   },
   "name": "iot-server",
   "version": "1.0.0",
-  "main": "Server/server.js",
+  "main": "server.js",
   "repository": "https://github.com/JaimeNufio/IotProjects.git",
   "author": "Jaime Nufio <jaimeenufio@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon node Server/server.js"
+    "start": "nodemon node server.js"
   }
 }
